--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
         "@testing-library/user-event": "^13.5.0",
         "classnames": "^2.2.6",
         "fast-memoize": "^2.5.2",
+        "mapbox-gl": "^2.9.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-map-gl": "^7.0.18",
         "react-router-dom": "6",
         "react-scripts": "5.0.1",
         "web-vitals": "^2.1.4"
